new feature is added

--- a/hi.html
+++ b/hi.html
@@ -1,1 +1,2 @@
 <p><b> HEy THis is pravin and he is now playing a PUBG that game is comes under the KRAFTON, and he not even taken the clothes for DIWALI  </b></p>
+<p>sbsbvebvdf</p>
